Fix overflow image on mobile

--- a/css/umbrellaproject.css
+++ b/css/umbrellaproject.css
@@ -138,6 +138,9 @@ body, html {
         display: inline-block;
         padding: 40px 20px;
     }
+    .gallery-frame ul li img {
+        width: 90%;
+    }
 
     .text-frame {
         width: 60%;
@@ -145,6 +148,9 @@ body, html {
         padding: 40px;
         color: #333;
         line-height: 2em;
+    }
+    .text-frame img {
+        width: 90%;
     }
     .center {
         text-align: center;
